# compiler-calculator

./: README.md  main.py  output.lex  pyproject.toml
src/code_generator/: code_generator.py  code_generator_new.py  code_generator_new_2.py  main.py  test.py
src/input/: input.txt  real_num_input.txt
src/lexical_analyzer/: laika.lex  lexical_analyzer.py
src/output/: laika.asm  laika.bracket  laika.csv  laika.tok
src/symbol_table/: symbol_table.py
src/syntax_analyzer/: laika.grammar  parser.out  parsetab.py  syntax_analyzer.py
