[project]
name = "compiler-calculator"
version = "0.1.0"
description = ""
authors = [
    {name = "PomPerWoW", email = "chatthanes22@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "ply (>=3.11,<4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false